# rag-content

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Containerfile  Containerfile-cuda  Containerfile-gpu  Makefile  README.md  build-args-konflux.conf  pdm.lock.cpu  pdm.lock.gpu  pyproject.toml  renovate.json  requirements-build.cuda.txt  requirements-build.txt  requirements.hashes.source.cuda.txt  requirements.hashes.source.txt  requirements.hashes.wheel.cuda.txt  requirements.hashes.wheel.pypi.cuda.txt  requirements.hashes.wheel.pypi.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.cuda.txt  requirements.overrides.txt  rpms.in.yaml  rpms.lock.yaml
.claude/commands/: file-dependabot-cves.md
.github/workflows/: bandit.yaml  black.yaml  build_and_push_container.yaml  build_and_push_dev.yaml  build_and_push_dev_gpu.yaml  check_dependencies.yaml  docker-base-build-publish.yml  mypy.yaml  outdated_dependencies.yaml  pyright.yaml  ruff.yaml  run-linters.yml  run-unittests.yml  unit_tests.yml
.konflux/: artifacts.lock.yaml  build-args-konflux-cuda.conf  build-args-konflux.conf  constraints.cuda.txt  profiles.toml  pypi_wheel_only.txt  redhat.repo  requirements-build.cuda.txt  requirements-build.txt  requirements.hashes.source.cuda.txt  requirements.hashes.source.txt  requirements.hashes.wheel.cpu.aarch64.txt  requirements.hashes.wheel.cpu.x86_64.txt  requirements.hashes.wheel.cuda.txt  requirements.hashes.wheel.pypi.cuda.aarch64.txt  requirements.hashes.wheel.pypi.cuda.base.txt  requirements.hashes.wheel.pypi.cuda.txt  requirements.hashes.wheel.pypi.cuda.x86_64.txt  requirements.hashes.wheel.pypi.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.cuda.txt  requirements.overrides.txt  rpms.in.yaml  rpms.lock.yaml
.konflux/cuda/: build-args-konflux.conf  rpms.in.yaml  rpms.lock.yaml
.tekton/: rag-content-cpu-0-5-pull-request.yaml  rag-content-cpu-0-5-push.yaml  rag-content-cpu-0-6-pull-request.yaml  rag-content-cpu-0-6-push.yaml  rag-content-cpu-0-7-pull-request.yaml  rag-content-cpu-0-7-push.yaml  rag-content-cuda-12-9-0-5-pull-request.yaml  rag-content-cuda-12-9-0-5-push.yaml  rag-content-cuda-12-9-0-6-pull-request.yaml  rag-content-cuda-12-9-0-6-push.yaml  rag-content-cuda-12-9-0-7-pull-request.yaml  rag-content-cuda-12-9-0-7-push.yaml  rag-content-pull-request.yaml  rag-content-push.yaml  rag-tool-cuda-pull-request.yaml  rag-tool-cuda-push.yaml  rag-tool-pull-request.yaml  rag-tool-push.yaml
.tekton/integration-tests/pipeline/: its.yaml  rag-content-0-7-integration-test.yaml  rag-content-integration-test.yaml
.tekton/integration-tests/tasks/: test-vm-cmd.yaml
docs/superpowers/plans/: 2026-06-02-konflux-integration-test.md
docs/superpowers/specs/: 2026-06-02-konflux-integration-test-design.md
scripts/: augment_wheel_hashes.py  generate-rpm-lock.sh  generate_embeddings.py  generate_packages_to_prefetch.py  generate_requirements_overrides.py  konflux_requirements.sh  konflux_requirements_cuda.sh  konflux_resolve.py  merge_pep517_build_requires.py  query_rag.py  register-llama-dbs.py  remove_pytorch_cpu_pyproject.py
scripts/cuda/: Makefile  README.md  cuda_cloud_formation.yaml  install_cuda_rhel9_ec2.sh  provision_cuda_lab.sh
src/lightspeed_rag_content/: Containerfile.output-image  __init__.py  config_templates.py  document_processor.py  image_builder.py  metadata_processor.py  okp.py  utils.py
src/lightspeed_rag_content/asciidoc/: __main__.py  asciidoctor_converter.py
src/lightspeed_rag_content/html/: __init__.py  __main__.py  html_reader.py
src/lightspeed_rag_content/pdf/: __init__.py  __main__.py  pdf_reader.py
tests/: .pydocstyle  conftest.py  test_document_processor.py  test_document_processor_llama_index.py  test_document_processor_llama_stack.py  test_generate_embeddings.py  test_image_builder.py  test_metadata_processor.py  test_okp.py  test_utils.py  utils.py
tests/asciidoc/: __init__.py  fixture.adoc  fixture.md  test__main__.py  test_asciidoc_converter.py  test_asciidoc_conveter.py  test_integration.py
tests/html/: test__main__.py  test_html_reader.py
tests/integration-konflux/: pipeline-konflux.sh
tests/integration-konflux/config/: lightspeed-stack.yaml  run.yaml
tests/integration-konflux/corpus/: manual.md
tests/pdf/: __init__.py  conftest.py  generate_fixture.py  test__main__.py  test_integration.py  test_pdf_reader.py
