[tool.ruff]

# description of all rules are available on https://docs.astral.sh/ruff/rules/
lint.select = ["D", "E", "F", "W", "C", "S", "I", "TCH", "SLOT", "RUF", "C90", "N", "YTT", "ASYNC", "TRIO"]

# we need to check 'mood' of all docstrings, this needs to be enabled explicitly
lint.extend-select = ["D401"]

lint.ignore = []
lint.pydocstyle.convention = "google"

target-version = "py312"
line-length = 100

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lightspeed-rag-content"
version = "0.1.0"
description = "RAG content for OpenShift LightSpeed."
authors = []
dependencies = [
    "PyYAML==6.0.1",
    "huggingface_hub>=0.23.4",
    "llama-index==0.10.62",
    "llama-index-vector-stores-faiss==0.1.2",
    "llama-index-embeddings-huggingface==0.2.2",
    "llama-index-readers-file==0.1.30",
    "faiss-cpu==1.11.0.post1",
    "llama-index-vector-stores-postgres>=0.1.14",
    "torch==2.7.1",
    # TODO: Change to 0.2.16 once released. Needed for https://github.com/meta-llama/llama-stack/issues/2819 
    "llama-stack@git+https://github.com/meta-llama/llama-stack.git@20c319795259f097101917d7304e63aeeeb21c5c",
    "llama-stack-client==0.2.15",
    "aiosqlite==0.21.0",
    "sqlite-vec==0.1.6",
]
requires-python = "==3.12.*"
dynamic = ["license", "readme"]

# PyTorch has multiple wheel variants for different backends - cpu, gpu, etc.
# By default on pypi.org is the gpu variant. Forces uv to use the cpu variant.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
llama-stack = { git = "https://github.com/meta-llama/llama-stack.git", rev = "20c319795259f097101917d7304e63aeeeb21c5c" }

[dependency-groups]
dev = [
    "black==24.10.0",
    "mypy==1.12.0",
    "ruff==0.6.9",
    "types-requests==2.32.0.20240622",
    "pre-commit==4.0.1",
    "coverage>=7.6.12",
    "huggingface-hub>=0.23.4",
    "radon>=6.0.1",
    "pyright>=1.1.401",
    "pylint>=3.3.7",
]

[tool.pylint."MESSAGES CONTROL"]
good-names = ["e"]
disable = ["R0902", "R0903", "R0913", "R0917", "W0621", "W0511"]
